# valuecell_LB

./: .env.example  .gitignore
python/: README.md  pyproject.toml
python/valuecell/server/: main.py
python/valuecell/server/api/: app.py
python/valuecell/server/api/routers/: user_profile.py
python/valuecell/server/api/schemas/: __init__.py  base.py  user_profile.py
python/valuecell/server/config/: .settings.py.swp  setting.py  settings.py
python/valuecell/server/db/: connection.py
python/valuecell/server/db/models/: base.py  user_profile.py
python/valuecell/server/db/repositories/: user_profile_repository.py
python/valuecell/server/services/: user_profile_service.py
python/valuecell/utils/: env.py
