[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "valuecell-learning-path"
version = "0.1.0"
description = "Learning path for building ValueCell-like backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.19.0",
    "yfinance>=0.2.65",
    "requests>=2.32.5",
    "akshare>=1.17.44",
    "agno[openai, google, lancedb]>=2.0,<3.0",
    "loguru>=0.7.3",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[tool.hatch.build.targets.wheel]
# 明确指定包的路径（从python目录下的valuecell目录开始）
packages = [
"python/valuecell"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.uv.venv]
# 指定虚拟环境名称（项目根目录下的 valuecell_env）
name = "valuecell_env"  